# CharacterForge2

./: .gitignore  NEXT_SESSION_PROMPT.md  O2_INPUTS.md  O3_INPUTS.md  O3_INPUTS_N8_LADDER.md  O4_INPUTS.md  O5_INPUTS.md  O6_INPUTS.md  OPTION_FORMAT_SPEC.md  README.md  SESSION_REPORT.md  SESSION_REPORT_O2.md  SESSION_REPORT_O2B.md  SESSION_REPORT_O3.md  SESSION_REPORT_O4.md  SESSION_REPORT_O5.md  SESSION_REPORT_O6.md  pyproject.toml  requirements.txt
app/data/: age_bands.README.md
app/ledger/: __init__.py  errors.py  grade.py  index.py  receipts.py
app/options/: __init__.py  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.jsdom.config.ts  vitest.node.config.ts
harvest_report/: HARVEST_LOG.md  OVERRIDES_APPLIED.md  POLISH_FLAGS.md  PRIORITY_REVIEW.md
scripts/: dev.py
tests/: conftest.py  spine_helpers.py  test_age_bands.py  test_catalog_laws.py  test_construction_gate.py  test_file_model.py  test_finalization.py  test_group_keys.py  test_harvest.py  test_ledger.py  test_merge.py  test_normalize.py  test_option_keys.py  test_orphans.py  test_paragraph.py  test_record_model.py  test_record_safety.py  test_required_key.py  test_resilient.py  test_safety_data.py  test_safety_filter.py  test_safety_seam.py  test_spine_audit.py  test_spine_auth.py  test_spine_catalog.py  test_spine_concurrency.py  test_spine_creator_view.py  test_spine_ledger.py  test_spine_lock.py  test_spine_orphans.py  test_spine_records.py  test_spine_refusals.py  test_spine_server.py  test_spine_startup.py  test_validate_cli.py  test_visibility.py
(+112 files in other folders)
