[project]
name = "characterforge2"
version = "0.1.0"
description = "CharacterForge v2 — option format loader, catalog, validator, harvest tooling, character record model, ledger skeleton (stages O1–O3)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
