[project]
name = "characterforge2"
version = "0.1.0"
description = "CharacterForge v2 — option format loader, catalog, validator, harvest tooling, character record model, ledger skeleton, safety filter (stages O1–O4)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
